tests/broken/add-bools.stderr
error[E0369]: cannot add `bool` to `bool`
 --> tests/broken/add-bools.rs:4:27
  |
4 | #[oxiplate_inline = "{{ a + b }}"]
  |                         - ^ - bool
  |                         |
  |                         bool
